Update project structure and files

--- a/codElevate/dashboard/static/dashboard/dashboard.css
+++ b/codElevate/dashboard/static/dashboard/dashboard.css
@@ -1,7 +1,9 @@
 body {
     margin: 0;
     font-family: Arial, sans-serif;
-    background-color: #f5f5f5;
+    background-color: #F6CFBE;
+    /* for browsers which don't support gradients */
+    background-image: linear-gradient(to right, #F6CFBE, #B9DCF2);
 }
 
 .dashboard-nav {
