--- a/codElevate/myprofile/templates/myprofile/profile-index.html
+++ b/codElevate/myprofile/templates/myprofile/profile-index.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Courses</title>
-    <link rel="stylesheet" href="{% static 'style.css' %}">
+    <title>Profile</title>
+    <link rel="stylesheet" href="{% static 'myprofile/style.css' %}">
 </head>
 <body>
-    <h1>This is the Your Courses Page.</h1>
+    <h1>This is the Your Profile Page.</h1>
 </body>
 </html>
