--- a/codElevate/templates/website/index.html
+++ b/codElevate/templates/website/index.html
@@ -7,8 +7,7 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Home Page</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' href="{% static 'style.css' %}">
-    <!-- <script src='main.js'></script> -->
+    <link rel='stylesheet' href="{% static 'website/style.css' %}">
 </head>
 
 <body>
